# haskell-programming

./: .gitignore  chapter-01-anything-from-almost-nothing.hs  chapter-02-basic-expressions-and-functions.hs  chapter-02-section-learn.hs  chapter-03-notes.hs  chapter-03-simple-operations-with-text.hs  chapter-04-because-pigs-cant-fly.hs  chapter-05-arith-3-broken.hs  chapter-05-type-kwon-do.hs  chapter-05-types.hs  chapter-06-less-ad-hoc-polymorphism.hs  chapter-07-more-functional-patterns.hs  chapter-08-functions-that-call-themselves.hs  chapter-09-cipher.hs  chapter-09-this-thing-and-some-more-stuff.hs  chapter-10-data-structure-origami.hs  chapter-11-algebraic-datatypes.hs  chapter-11-phone.hs  chapter-11-vignere-cipher.hs  chapter-12-signaling-adversity.hs  chapter-13-building-projects.hs  chapter-14-testing.hs  chapter-15-monoid-semigroup.hs  chapter-16-functor.hs  chapter-17-applicative.hs  chapter-18-monad.hs  reverse.hs
addition/: Addition.hs  addition.cabal
chapter15/: chapter15.cabal  stack.yaml
chapter16/: chapter16.cabal
chapter17/: chapter17.cabal
chapter18/: chapter18.cabal
chapter19/: Instances.hs
hangman/: README.md  hangman.cabal
miscellaneous-files/: algebraic-datatypes.hs  arith2.hs  arith3broken.hs  arith4.hs  cipher.hs  compose.hs  db.hs  factorial.hs  greetIfCool3.hs  guards.hs  lists.hs  matchingTuples1.hs  more-functional-patterns.hs  numbers-into-words.hs  parametricity.hs  recursion.hs  (+9 more)
testing/: Addition.hs  UsingQuickCheck.hs  UsingQuickCheckOld.hs  WordNumber.hs  WordNumberTest.hs  chapter-14-recursive-multiplication.hs  testing.cabal
(+17 files in other folders)
