name:                testing
version:             0.1.0.0
synopsis:            Testing
description:         none
homepage:            https://github.com/neallred/haskell-programming/
license:             BSD3
license-file:        LICENSE
author:              Nathaniel Allred
maintainer:          neallred@gmail.com
copyright:           2018 Nathaniel Allred
category:            Testing
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Addition
  ghc-options:         -Wall -fwarn-tabs
  build-depends:       base >= 4.7 && < 5
                     , hspec
                     , primes
                     , ansi-terminal
                     , QuickCheck
  hs-source-dirs:      .
  default-language:    Haskell2010
